--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,15 @@
-/* font-family: 'Rubik', sans-serif; */
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+html {
+  font-size: 62.5%;
+}
+body {
+  font-family: "Rubik", sans-serif;
+}
+.App {
+  padding: 2rem;
+  font-size: 1.6rem;
+}
