--- a/src/App.css
+++ b/src/App.css
@@ -12,4 +12,13 @@ body {
 .App {
   padding: 2rem;
   font-size: 1.6rem;
+  background-color: rgb(234, 236, 241, 0.5);
+}
+.replies {
+  padding-left: 1.5rem;
+  border-left: 0.5px solid rgb(103, 114, 126, 0.3);
+}
+button {
+  border: none;
+  background-color: white;
 }
