--- a/src/App.css
+++ b/src/App.css
@@ -22,3 +22,11 @@ button {
   border: none;
   background-color: white;
 }
+@media (min-width: 750px) {
+  .App {
+    padding: 10rem;
+  }
+  .replies {
+    padding-left: 5rem;
+  }
+}
