--- a/src/components/Comment.module.css
+++ b/src/components/Comment.module.css
@@ -41,8 +41,17 @@
 
 @media (min-width: 750px) {
   .comment {
-    flex-direction: row-reverse;
+    display: grid;
+    grid-template-columns: 5% 1fr 10%;
+    grid-template-areas: "box2 box1 box3";
   }
   .uiAdjuster {
+    grid-area: box1;
+  }
+  .footer {
+    grid-area: box2;
+  }
+  .replyDeleteEdit {
+    grid-area: box3;
   }
 }
