--- a/src/components/ReplyDeleteEdit.module.css
+++ b/src/components/ReplyDeleteEdit.module.css
@@ -1,3 +1,9 @@
+.mobileDesign {
+  display: block;
+}
+.notMobileDesign {
+  display: none;
+}
 .replyDiv {
   display: flex;
   align-items: center;
@@ -15,4 +21,12 @@
 .reply {
   font-weight: 700;
   color: #5457b6;
+}
+@media (min-width: 750px) {
+  .mobileDesign {
+    display: none;
+  }
+  .notMobileDesign {
+    display: block;
+  }
 }
