cnvrt rplydeledit div into btn adjusted the likCnt

--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,10 @@ body {
   font-size: 1.6rem;
   background-color: rgb(234, 236, 241, 0.5);
 }
+.container {
+  max-width: 1080px;
+  margin: auto;
+}
 .replies {
   padding-left: 1.5rem;
   border-left: 0.5px solid rgb(103, 114, 126, 0.3);
@@ -24,7 +28,7 @@ button {
 }
 @media (min-width: 750px) {
   .App {
-    padding: 10rem;
+    padding: 7rem;
   }
   .replies {
     padding-left: 5rem;
