--- a/src/components/LikeCount.module.css
+++ b/src/components/LikeCount.module.css
@@ -15,7 +15,8 @@
 @media (min-width: 750px) {
   .likeCount {
     flex-direction: column;
-    height: 100%;
     width: 100%;
+    height: 100%;
+    max-height: 120px;
   }
 }
