--- a/src/components/ReplyDeleteEdit.module.css
+++ b/src/components/ReplyDeleteEdit.module.css
@@ -16,7 +16,7 @@
   align-items: center;
   justify-content: center;
   gap: 1.5rem;
-  min-width: fit-content;
+  flex-direction: column;
 }
 .delete {
   color: red;
