--- a/src/components/ReplyDeleteEdit.module.css
+++ b/src/components/ReplyDeleteEdit.module.css
@@ -16,7 +16,6 @@
   align-items: center;
   justify-content: center;
   gap: 1.5rem;
-  flex-direction: column;
 }
 .delete {
   color: red;
@@ -40,5 +39,8 @@
   }
   .notMobileDesign {
     display: block;
+  }
+  .deleteEdit {
+    flex-direction: column;
   }
 }
