--- a/src/components/ReplyDeleteEdit.module.css
+++ b/src/components/ReplyDeleteEdit.module.css
@@ -14,7 +14,7 @@
 .deleteEdit {
   display: flex;
   align-items: baseline;
-  justify-content: end;
+  justify-content: flex-end;
   gap: 1.5rem;
 }
 .delete {
