--- a/src/components/CommentsList.module.css
+++ b/src/components/CommentsList.module.css
@@ -1,6 +1,7 @@
 .replies {
   padding-left: 1.5rem;
   border-left: 0.5px solid rgb(103, 114, 126, 0.3);
+  margin-bottom: 4rem;
 }
 @media (min-width: 750px) {
   .replies {
