--- a/src/components/AddReply.module.css
+++ b/src/components/AddReply.module.css
@@ -24,6 +24,7 @@
   background-color: #5457b6;
   color: white;
   border-radius: 1rem;
+  cursor: pointer;
 }
 .button:disabled {
   background-color: rgb(84, 87, 182, 0.5);
