--- a/src/components/Comment.module.css
+++ b/src/components/Comment.module.css
@@ -32,6 +32,17 @@
 .body {
   color: #67727e;
 }
+
+.bodyCover {
+  position: relative;
+}
+.bodyInput {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
 .footer {
   width: 100%;
   display: flex;
