--- a/src/components/ReplyDeleteEdit.module.css
+++ b/src/components/ReplyDeleteEdit.module.css
@@ -27,6 +27,13 @@
   gap: 0.5rem;
   cursor: pointer;
 }
+.update {
+  color: white;
+  background-color: #5457b6;
+  padding: 1rem 2rem;
+  border-radius: 1rem;
+  cursor: pointer;
+}
 .edit {
   color: #5457b6;
   font-weight: bold;
