made the input tag inherit the font family

--- a/src/components/AddReply.module.css
+++ b/src/components/AddReply.module.css
@@ -8,6 +8,7 @@
   width: 100%;
   padding: 1rem 1rem 5rem 1rem;
   border: 0.5px solid rgb(103, 114, 126, 0.3);
+  font-family: "Rubik", sans-serif;
 }
 .div {
   width: 100%;
