--- a/src/components/ReplyDeleteEdit.module.css
+++ b/src/components/ReplyDeleteEdit.module.css
@@ -34,6 +34,10 @@
   border-radius: 1rem;
   cursor: pointer;
 }
+.update:disabled{
+  background-color: rgba(84, 87, 182,0.5);
+
+}
 .edit {
   color: #5457b6;
   font-weight: bold;
